# ca-a-versiculo

./: .gitignore  App.js  app.json  metro.config.js  package-lock.json  package.json
.expo-export-android-check/: metadata.json
.expo-export-android-check/_expo/static/js/android/: AppEntry-2144c9a074f64ae22e30f9fd502380f0.hbc
android/: gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/java/com/rayvidal/biblucacaversiculo/: MainActivity.kt  MainApplication.kt
android/app/src/main/jni/: CMakeLists.txt
android/app/src/main/res/values/: strings.xml
scripts/: generate-verses.js
src/assets/: images.js
src/components/: GameModeSelector.js  PhraseToast.js  ProgressBar.js  VerseCard.js  WordSearchGrid.js
src/constants/: verseHuntModes.js
src/data/: mockVerse.js  verses.json
src/hooks/: useBackgroundMusic.js  useSoundEffect.js  useVerseHuntGame.js  useVersesPlayed.js  useVictorySound.js
src/screens/: HomeScreen.js  SettingsScreen.js  SplashScreen.js  VerseHuntScreen.js
src/services/: verseSource.js
src/theme/: palette.js
src/utils/: selection.js  text.js  validation.js  verseProcessing.js  wordSearch.js
